test/fixtures/0005-prometheus-stats/envoy-go.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 0 }
static_resources:
  listeners:
    - name: l_h1
      address: { socket_address: { address: 127.0.0.1, port_value: 0 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: HTTP1
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: vh
                      domains: ["*"]
                      routes:
                        - match: { path: /missing }
                          direct_response: { status: 404, body: { inline_string: "not found\n" } }
                        - match: { prefix: / }
                          route: { cluster: c0 }
  clusters:
    - name: c0
      type: STATIC
      connect_timeout: 1s
      load_assignment:
        cluster_name: c0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address: { socket_address: { address: 127.0.0.1, port_value: 0 } }  # filled by harness
